<resources>
    <string name="app_name">ITMOEvent</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="test_string">hi hello</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_item_image_desc">event image</string>
    <string name="place_icon_desc">place icon</string>
    <string name="event_section_all_events_header">Все</string>
    <string name="event_section_user_events_header">Мои</string>
    <string name="user_events_create_requests_title">Запросы на создание мероприятий</string>
    <string name="user_events_organized_title">Мероприятия с ролью</string>
    <string name="user_events_helped_title">Помощник</string>
    <string name="event_req_create">Заполнить новое мероприятие</string>
    <string name="nav_bar_events_title">Мероприятия</string>
    <string name="nav_bar_tasks_title">Задачи</string>
    <string name="nav_bar_manage_title">Управление</string>
    <string name="nav_bar_profile_title">Профиль</string>
    <string name="event_filter_date_from">От</string>
    <string name="event_filter_date_to">До</string>
    <string name="event_filter_status">Статус</string>
    <string name="event_filter_format">Формат</string>
    <string name="event_filter_name">Название</string>
    <string name="event_filter_apply">Применить</string>
    <string name="event_filter_header">Фильтр мероприятий</string>
    <string name="user_events_role_hint">Роль</string>
    <string name="no_found_message">Не найдено</string>
    <string name="task_name_title">Название задачи</string>
    <string name="task_description_title">Описание задачи</string>
    <string name="task_deadline_text">Выполнить до DD.MM.YYYY</string>
    <string name="task_notification_deadline_text">Уведомим DD.MM.YYYY</string>
    <string name="task_place_text">Место:</string>
    <string name="task_executor_text">Исполнитель:</string>
    <string name="task_event_status_filter_hint_text">Статус</string>
    <string name="task_filter_header_text">Фильтр задач</string>
    <string name="toggle_button_current_teext">Текущие</string>
    <string name="toggle_button_prev_text">Прошедшие</string>
    <string name="task_events_filter_text">Мероприятие</string>
    <string name="task_activity_filter_text">Активность</string>
    <string name="task_item_name_text">Название задачи</string>
    <string name="task_item_event_name_text">Название мероприятия</string>
    <string name="task_item_event_activity_name_text">Название активности</string>
    <string name="task_item_deadline_text">До dd.mm.yyyy</string>
    <string name="task_item_state_text">Статус</string>
    <string name="fio_tools_text">Фридкин Даниил</string>
    <string name="mail_tools_text">useremail@gmail.com</string>
    <string name="switch_tools_text">Получать уведомления по почте</string>
    <string name="edit_profile_button_text">Редактирование профиля</string>
    <string name="edit_password_button_text">Смена пароля</string>
    <string name="edit_profile_button_confirm_text">Редактировать профиль</string>
    <string name="edit_password_button_confirm_text">Сменить пароль</string>
    <string name="edit_current_password_text">Введите текущий пароль</string>
    <string name="edit_new_password_text">Введите новый пароль</string>
    <string name="edit_new_password_twice_text">Введите новый пароль повторно</string>
    <string name="notifications_title_text">Уведомления</string>
    <string name="desc">Описание</string>
    <string name="event_desc_show_close_desc">Открыть/закрыть описание мероприятия</string>
    <string name="event_details_header">Детали</string>
    <string name="event_icon_show_close_details">Открыть/закрыть детали мероприятия</string>
    <string name="event_details_time_hold_header">Проведение</string>
    <string name="event_details_time_register_header">Регистрация</string>
    <string name="event_details_time_prepare_header">Подготовка</string>
    <string name="event_details_participants_max_header">Максимальное число участников</string>
    <string name="event_details_age_header">Возраст участников от</string>
    <string name="event_edit_btn">Редактировать</string>
    <string name="event_image">Обложка мероприятия</string>
    <string name="place_item_more_desc">Перейти к информации о площадке</string>
    <string name="delete_action">Удалить</string>
    <string name="event_subsection_activities">Активности</string>
    <string name="event_subsection_organizers">Организаторы</string>
    <string name="event_subsection_participants">Участники</string>
    <string name="participants_mark_all_btn">Отметить всех</string>
    <string name="edit_event_image_label">Обложка:</string>
    <string name="edit_event_image_load">Загрузить</string>
    <string name="edit_event_title_label">Название</string>
    <string name="edit_event_shrt_desc_label">Краткое описание</string>
    <string name="edit_event_long_desc_label">Полное описание</string>
    <string name="edit_event_time_hold_from_label">Начало проведения</string>
    <string name="edit_event_time_hold_to_label">Конец проведения</string>
    <string name="edit_event_time_register_from_label">Начало регистрации</string>
    <string name="edit_event_time_register_to_label">Конец регистрации</string>
    <string name="edit_event_time_prepare_from_label">Начало подготовки</string>
    <string name="edit_event_time_prepare_to_label">Конец подготовки</string>
    <string name="edit_event_place_label">Площадка</string>
    <string name="edit_event_location_info_label">Информация о локации</string>
    <string name="edit_event_participants_max_label">Число участников</string>
    <string name="edit_event_age_label">Возраст до</string>
    <string name="edit_tab_activities">Активности</string>
    <string name="edit_tab_orgs">Организаторы</string>
    <string name="edit_tab_tasks">Задачи</string>
    <string name="edit_save_btn">Сохранить</string>
    <string name="edit_activities_existing_header">Существующие активности</string>
    <string name="edit_activities_form_header">Создать/изменить активность</string>
    <string name="edit_form_clear_btn">Очистить</string>
    <string name="edit_form_cancel_btn">Отменить</string>
    <string name="edit_form_accept_btn">Добавить</string>
    <string name="edit_item_edit_btn">Изменить</string>
    <string name="edit_item_delete_btn">Удалить</string>
    <string name="edit_tasks_existing_header">Существующие задачи</string>
    <string name="edit_tasks_edit_header">Создать/изменить задачу</string>
    <string name="edit_tasks_item_copy_btn">Копировать</string>
    <string name="edit_task_form_title_label">Название задачи</string>
    <string name="edit_task_form_desc_label">Описание задачи</string>
    <string name="edit_task_form_deadline_label">Срок выполнения</string>
    <string name="edit_task_form_notify_time_label">Срок оповещения исполнителя</string>
    <string name="edit_task_form_activity_label">Активность</string>
    <string name="edit_task_form_executor_label">Исполнитель</string>
    <string name="edit_orgs_add_org_header">Добавить организатора</string>
    <string name="edit_orgs_add_org_user_label">Пользователь</string>
    <string name="edit_orgs_add_org_role_label">Роль</string>
    <string name="edit_orgs_add_org_btn">Добавить</string>
    <string name="edit_orgs_remove_org_header">Удалить организаторов</string>
    <string name="edit_orgs_remove_org_role_label">Роль</string>
    <string name="remove_org_item_btn">Удалить</string>
    <string name="event_duration">%1$s - %2$s</string>
    <string name="exit_button_text">Выход</string>
    <string name="input_message_too_long">Сторока слишком длинная</string>
    <string name="reset_password_confirm_info">Заявка на восстановление отправлена</string>
    <string name="place_name_label">Название</string>
    <string name="place_address_label">Адрес</string>
    <string name="place_room_label">Комната</string>
    <string name="place_desc_label">Описание</string>
    <string name="refuse_task_button_text">Отказаться от задачи</string>
    <string name="not_filled">Не заполнено</string>
    <string name="filter_date_helper_text">Формат ввода \'dd.mm.yyyy[ hh:mm]\'</string>
    <string name="event_subsection_tasks">Задачи</string>
    <string name="task_complete_till">Выполнить до</string>
    <string name="task_assigned">Исполнитель</string>
    <string name="event">Мероприятие</string>
    <string name="activity">Активность</string>
    <string name="task_execute_place">Место выполения</string>
    <string name="task_remind_time">Время напоминания:</string>
    <string name="task_creation_time">Время создания:</string>
    <string name="assigned_icon_cd">assigned icon</string>
    <string name="date_icon_cd">date icon</string>

<!--    task creation errors-->
    <string name="err_field_empty">Поле не может быть пустым</string>
    <string name="err_deadline_in_past">Крайний срок не может быть в прошлом</string>
    <string name="err_remind_in_past">Напоминание не может быть в прошлом</string>
    <string name="err_remind_later_than_deadline">Напоминание не может быть позже крайнего срока</string>
    <string name="err_field_date_format">Не соответствует формату заполнения</string>
    <string name="not_yet_implemented">Пока не реализовано</string>


</resources>