<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />

    <TextView
        android:id="@+id/edit_desc_image_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/edit_event_image_label"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_desc_image_load_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/edit_event_image_load"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_desc_image_label"
        app:layout_constraintStart_toEndOf="@id/edit_desc_image_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_desc_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/edit_event_title_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_desc_image_load_btn">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_desc_short_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_event_shrt_desc_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_desc_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_desc_long_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_event_long_desc_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_desc_short_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_time_hold_from"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_event_time_hold_from_label"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_desc_long_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_time_hold_to"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/edit_event_time_hold_to_label"
        app:layout_constraintStart_toEndOf="@id/edit_time_hold_from"
        app:layout_constraintTop_toTopOf="@id/edit_time_hold_from">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_time_register_from"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_event_time_register_from_label"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_time_hold_from">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_time_register_to"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/edit_event_time_register_to_label"
        app:layout_constraintStart_toEndOf="@id/edit_time_register_from"
        app:layout_constraintTop_toTopOf="@id/edit_time_register_from">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_time_prepare_from"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_event_time_prepare_from_label"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_time_register_from">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_time_prepare_to"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/edit_event_time_prepare_to_label"
        app:layout_constraintStart_toEndOf="@id/edit_time_prepare_from"
        app:layout_constraintTop_toTopOf="@id/edit_time_prepare_from">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_event_format"
        style="?textInputFilledExposedDropdownMenuStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/event_filter_status"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_time_prepare_from">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?textAppearanceLabelMedium"
            app:simpleItems="@array/event_status_array" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_event_status"
        style="?textInputFilledExposedDropdownMenuStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/event_filter_format"
        app:layout_constraintStart_toEndOf="@id/edit_event_format"
        app:layout_constraintTop_toTopOf="@id/edit_event_format">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?textAppearanceLabelMedium"
            app:simpleItems="@array/event_format_array" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_event_place"
        style="?textInputFilledExposedDropdownMenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_event_place_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"

        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_format">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?textAppearanceLabelMedium"
            app:simpleItems="@array/event_format_array" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_event_place_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_event_location_info_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_place">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_event_participants_max"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_event_participants_max_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_event_place_about">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_event_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_event_age_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/edit_event_participants_max">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceLabelMedium" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
