<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.TaskDetailsFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/task_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="Задача" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/task_name_title"
        android:gravity="start"
        android:textAppearance="@style/Text.Header2"
        app:layout_constraintTop_toBottomOf="@id/task_appbar_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd = "20dp"
        android:layout_marginStart = "20dp"
        android:padding="10dp"
        android:text="@string/task_description_title"
        android:gravity="start"
        android:textAppearance="@style/Text.Body1"
        android:background="@color/blue_150"
        app:layout_constraintTop_toBottomOf="@id/guideline_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_30"/>

    <TextView
        android:id="@+id/task_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/task_deadline_text"
        android:gravity="start"
        android:textAppearance="@style/Text.Header3"
        app:layout_constraintTop_toBottomOf="@id/guideline_30"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/task_notification_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/task_notification_deadline_text"
        android:gravity="start"
        android:textAppearance="@style/Text.Header3"
        app:layout_constraintTop_toBottomOf="@id/task_deadline"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/task_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/task_place_text"
        android:gravity="start"
        android:textAppearance="@style/Text.Header3"
        app:layout_constraintTop_toBottomOf="@id/task_notification_time"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_status_selector"
        style="?textInputFilledExposedDropdownMenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd = "20dp"
        android:layout_marginStart = "20dp"
        android:hint="@string/task_event_status_filter_hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_place">

        <AutoCompleteTextView
            android:id="@+id/task_status_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?textAppearanceLabelMedium"
            app:simpleItems="@array/task_status_options_array" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>

</androidx.constraintlayout.widget.ConstraintLayout>