<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="12dp" />

        <TextView
            android:id="@+id/edit_activities_existing_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/edit_activities_existing_header"
            android:textAppearance="?textAppearanceHeadlineSmall"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edit_activities_existing_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/edit_activities_existing_header"
            tools:itemCount="3"
            tools:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/edit_activities_list_item"
            tools:orientation="horizontal" />


        <TextView
            android:id="@+id/edit_activities_form_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/edit_activities_form_header"
            android:textAppearance="?textAppearanceHeadlineSmall"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/edit_activities_existing_rv" />

        <include
            android:id="@+id/edit_activities_form"
            layout="@layout/event_edit_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_activities_form_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_activities_form_clear_btn"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/edit_form_clear_btn"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/edit_activities_form" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_activities_form_cancel_btn"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:text="@string/edit_form_cancel_btn"
            app:layout_constraintEnd_toStartOf="@id/edit_activities_form_accept_btn"
            app:layout_constraintTop_toBottomOf="@id/edit_activities_form" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_activities_form_accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/edit_form_accept_btn"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/edit_activities_form" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
